fixes white space one the right, improved theme

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@ html {
   height: 100%;
   font-family: "Anton", sans-serif;
   overflow-x: hidden;
+
 }
 .body {
   /* background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
@@ -107,6 +108,7 @@ button:hover {
   width: 100%;
   columns : 2 auto;
   overflow-y: scroll;
+
   
   
   
@@ -115,7 +117,14 @@ button:hover {
   
   .widget > div{
     
-     background-color: rgb(229, 233, 233); 
+     background-color: rgba(229, 233, 233,0); 
+    }
+  .widget-half-div{
+      
+      background-color: rgba(229, 233, 233,0.2); 
+  }
+  .each-Widget{
+    background-color: rgba(204, 198, 198, 0.6);
   }
 
 .experiences-div{
@@ -131,6 +140,7 @@ button:hover {
   border-radius: 5px;
   height: 2.5rem;
   font-family: "Anton", sans-serif;
+  color:white;
   border-style: outset;
   text-align: center;
 
@@ -158,12 +168,17 @@ outline: 1px solid rgb(112, 144, 114);
 }
 .summery{
    
-  background-color: rgba(0,0,0,0.5);
-
+  background-color: white;
+  border-radius: 10px;
+  word-break: break-all;
   
 }
 .summery-text{
-  margin:0px 10px;
+  margin-top: 10px;
+}
+.body-row{
+  margin-right: 0;
+  /* this is needed for alignemnt */
 }
 .side-body-left{
  background-image: url("./images/body-left.svg");
@@ -177,10 +192,18 @@ outline: 1px solid rgb(112, 144, 114);
  
 
 }
-@media (max-width:766px){
+.AboutMe{
+  margin-left:3px ;
+  padding: 10px;
+}
+
+@media (max-width:600px){
   
   .body{
     background-image: url("./images/small-device-body-background.png");
     background-size: cover;
   }
+  .widget > h3{
+    background-image: url("./images/main-grey-background.svg");
+    color: rgb(23, 190, 46); }
 }
